// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-bdvvtL kGIqKj sinoui-typography sinoui-typography--body1"
  color="textPrimary"
  type="body1"
>
  Body1
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdvvtL kGIqKj sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </h2>,
  <p
    className="sc-bdvvtL ebTdCP sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL bNXjZa sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL dXnSZz sinoui-typography sinoui-typography--body1"
    color="success"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL kGIqKj sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-bdvvtL kGIqKj sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL dRHRXc sinoui-typography sinoui-typography--body1"
    color="primary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL epmNQz sinoui-typography sinoui-typography--body1"
    color="secondary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL kGIqKj sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL dcnREy sinoui-typography sinoui-typography--body1"
    color="textSecondary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL gtLosi sinoui-typography sinoui-typography--body1"
    color="error"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL iUzMyb sinoui-typography sinoui-typography--body1"
    color="warning"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL dXnSZz sinoui-typography sinoui-typography--body1"
    color="success"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdvvtL iJyITv sinoui-typography sinoui-typography--body1"
    color="info"
    type="body1"
  >
    Body1
  </p>,
]
`;
